# rasppi

./: .pre-commit-config.yaml  pyproject.toml
configs/: config.txt  fullpageos-wpa-supplicant.txt  fullpageos.txt
scripts/: raspberrypi_setup.sh
