[tool.poetry]
name = "rasppi"
version = "1.0.0"
description = "Raspberry Pi Settings"
authors = ["benbenbang <bn@bitbrew.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
